<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editText_Email_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="60dp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="20px"
        android:ems="10"
        android:hint="@string/editText_Username_Hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Password_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20px"
        android:ems="10"
        android:hint="@string/editText_Password_Hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email_Login" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/button_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password_Login"
        app:rippleColor="#CDDC39" />

    <TextView
        android:id="@+id/textView_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Create a new account"
        android:textColor="#2196F3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button_Login"
        app:layout_constraintTop_toBottomOf="@+id/button_Login" />

</androidx.constraintlayout.widget.ConstraintLayout>