<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_DriftBottle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/drift_bottle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageview_Post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_background"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageButton_Close"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imageview_Post"
        app:layout_constraintTop_toTopOf="@+id/imageview_Post"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_randbottle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_Post"
        app:layout_constraintEnd_toEndOf="@+id/imageview_Post"
        app:layout_constraintStart_toStartOf="@+id/imageview_Post"
        app:layout_constraintTop_toTopOf="@+id/imageview_Post" />

</androidx.constraintlayout.widget.ConstraintLayout>