...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_avatar_post"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintStart_toStartOf="@+id/imageView_media"
        app:layout_constraintTop_toBottomOf="@+id/imageView_media"
        app:selectionRequired="false"
        app:singleLine="false"/>

    <TextView
        android:id="@+id/textView_PostID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="#6C6C6C"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView_date"
...
