...
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/DriftBottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drift Bottle" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/BottleSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bottle Square" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/MyProfile"
...
